# groundstation

hardware/: Cargo.toml
hardware/.cargo/: config.toml
hardware/src/: main.rs
